--- a/CapstoneProject/MainWindow.xaml
+++ b/CapstoneProject/MainWindow.xaml
@@ -1,12 +1,31 @@
-﻿<Window x:Class="CapstoneProject.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CapstoneProject"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="CapstoneProject.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:CapstoneProject"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:CapstoneProject.Views"
+    xmlns:vms="clr-namespace:CapstoneProject.ViewModels"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
+        <Grid.Resources>
+            <!-- <DataTemplate DataType="{x:Type vms:$VIEW_MODEL_NAME$}"> -->
+            <!--     <views:$VIEW_NAME$ /> -->
+            <!-- </DataTemplate> -->
 
+            <DataTemplate DataType="{x:Type vms:FirstExampleViewModel}">
+                <views:FirstExampleView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type vms:SecondExampleViewModel}">
+                <views:SecondExampleView />
+            </DataTemplate>
+        </Grid.Resources>
+
+        <ContentControl Content="{Binding CurrentViewModel}" />
     </Grid>
 </Window>
