--- a/CapstoneProject/App.xaml
+++ b/CapstoneProject/App.xaml
@@ -4,16 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:CapstoneProject">
     <Application.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Padding" Value="10,5" />
-        </Style>
-
         <Style TargetType="TextBox">
             <Setter Property="Padding" Value="10,5" />
         </Style>
 
         <Style x:Key="Header" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="24" />
+            <Setter Property="FontSize" Value="26" />
+            <Setter Property="Foreground" Value="Coral" />
+            <Setter Property="FontWeight" Value="Bold" />
         </Style>
     </Application.Resources>
 </Application>
