--- a/CapstoneProject/MainWindow.xaml
+++ b/CapstoneProject/MainWindow.xaml
@@ -7,25 +7,36 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:CapstoneProject.Views"
     xmlns:vms="clr-namespace:CapstoneProject.ViewModels"
-    Title="MainWindow"
+    Title="Capstone"
     Width="800"
     Height="450"
+    MinWidth="800"
+    MinHeight="450"
+    FontSize="14"
+    SourceInitialized="Window_SourceInitialized"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.Resources>
-            <!-- <DataTemplate DataType="{x:Type vms:$VIEW_MODEL_NAME$}"> -->
-            <!--     <views:$VIEW_NAME$ /> -->
-            <!-- </DataTemplate> -->
+    <Grid Background="#232323">
+        <Grid Margin="10,10">
+            <Grid.Resources>
+                <!-- <DataTemplate DataType="{x:Type vms:$VIEW_MODEL_NAME$}"> -->
+                <!--     <views:$VIEW_NAME$ /> -->
+                <!-- </DataTemplate> -->
 
-            <DataTemplate DataType="{x:Type vms:FirstExampleViewModel}">
-                <views:FirstExampleView />
-            </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:FirstExampleViewModel}">
+                    <views:FirstExampleView />
+                </DataTemplate>
 
-            <DataTemplate DataType="{x:Type vms:SecondExampleViewModel}">
-                <views:SecondExampleView />
-            </DataTemplate>
-        </Grid.Resources>
+                <DataTemplate DataType="{x:Type vms:SecondExampleViewModel}">
+                    <views:SecondExampleView />
+                </DataTemplate>
 
-        <ContentControl Content="{Binding CurrentViewModel}" />
+                <DataTemplate DataType="{x:Type vms:LampAnalysisViewModel}">
+                    <views:LampAnalysisView />
+                </DataTemplate>
+            </Grid.Resources>
+
+            <ContentControl Content="{Binding CurrentViewModel}" />
+        </Grid>
     </Grid>
 </Window>
