--- a/CapstoneProject/Views/LampSettingsView.xaml
+++ b/CapstoneProject/Views/LampSettingsView.xaml
@@ -3,8 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:CapstoneProject.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:CapstoneProject.Views"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
