--- a/CapstoneProject/App.xaml
+++ b/CapstoneProject/App.xaml
@@ -1,23 +1,64 @@
 ﻿<Application
     x:Class="CapstoneProject.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:CapstoneProject">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <Style TargetType="TextBox">
             <Setter Property="Padding" Value="10,5" />
+            <Setter Property="MinWidth" Value="100" />
         </Style>
 
         <Style x:Key="Header" TargetType="TextBlock">
             <Setter Property="FontSize" Value="26" />
-            <Setter Property="Foreground" Value="Coral" />
+            <Setter Property="Foreground" Value="Crimson" />
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
 
         <Style x:Key="Property" TargetType="TextBlock">
             <Setter Property="FontSize" Value="15" />
-            <Setter Property="Foreground" Value="Crimson" />
+            <Setter Property="Foreground" Value="OrangeRed" />
             <Setter Property="FontWeight" Value="Bold" />
+        </Style>
+
+        <Style x:Key="Button" TargetType="Button">
+            <Setter Property="Padding" Value="5" />
+            <Setter Property="Background" Value="Coral" />
+            <Setter Property="BorderBrush" Value="Coral" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="YellowGreen" />
+                </Trigger>
+                <Trigger Property="IsMouseCaptured" Value="True">
+                    <Setter Property="Background" Value="DarkGreen" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="PanelBorder" TargetType="Border">
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Stretch" />
+            <Setter Property="Background" Value="LightGray" />
+            <Setter Property="CornerRadius" Value="8" />
+        </Style>
+        <Style x:Key="FloralPropertyBorder" TargetType="Border">
+            <Setter Property="Background" Value="FloralWhite" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Margin" Value="3,3,3,0" />
+        </Style>
+        <Style x:Key="AntiquePropertyBorder" TargetType="Border">
+            <Setter Property="Background" Value="AntiqueWhite" />
+            <Setter Property="CornerRadius" Value="8" />
+            <Setter Property="Margin" Value="3,3,3,0" />
         </Style>
     </Application.Resources>
 </Application>
