--- a/CapstoneProject/Views/LampConnectedView.xaml
+++ b/CapstoneProject/Views/LampConnectedView.xaml
@@ -8,75 +8,71 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <Grid>
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
-            <!--  Headers  -->
+            <!--  Headers definition  -->
             <RowDefinition Height="Auto" />
-            <!--  Contents  -->
+            <!--  Contents definition  -->
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <!--  Headers  -->
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <!--  Overview Header  -->
-                <ColumnDefinition Width="*" />
-                <!--  Daily Analysis Header  -->
-                <ColumnDefinition Width="1.8*" />
-            </Grid.ColumnDefinitions>
-
+        <Grid.ColumnDefinitions>
             <!--  Overview Header  -->
-            <Border
-                Grid.Column="0"
-                Margin="5,5"
-                Background="LightGray"
-                CornerRadius="8">
-
-                <TextBlock
-                    Margin="10,0"
-                    Style="{StaticResource Header}"
-                    Text="Lamp Overview" />
-            </Border>
-
+            <ColumnDefinition Width="180*" />
+            <!--  Grid Splitter definition  -->
+            <ColumnDefinition Width="5" />
             <!--  Daily Analysis Header  -->
-            <Border
-                Grid.Column="1"
-                Margin="5,5"
-                Background="LightGray"
-                CornerRadius="8">
+            <ColumnDefinition Width="270*" />
+        </Grid.ColumnDefinitions>
 
-                <TextBlock
-                    Margin="10,0"
-                    Style="{StaticResource Header}"
-                    Text="Daily Analysis" />
-            </Border>
-        </Grid>
-
-        <!--  Contents  -->
-        <Grid
-            Grid.Row="1"
+        <GridSplitter
+            Grid.Row="0"
+            Grid.RowSpan="2"
+            Grid.Column="1"
+            Width="5"
             HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <!--  Overview Content  -->
-                <ColumnDefinition Width="*" />
-                <!--  Daily Analysis Content  -->
-                <ColumnDefinition Width="1.8*" />
-            </Grid.ColumnDefinitions>
+            Background="Coral">
+            <GridSplitter.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="3" />
+                </Style>
+            </GridSplitter.Resources>
+        </GridSplitter>
+        <!--  Overview Header  -->
+        <Border
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="5,5"
+            Style="{StaticResource PanelBorder}">
 
-            <!--  Overview Content  -->
-            <Border
-                Grid.Column="0"
-                Margin="5,5"
-                VerticalAlignment="Stretch"
-                Background="LightGray"
-                CornerRadius="8">
+            <TextBlock
+                Margin="10,0"
+                Style="{StaticResource Header}"
+                Text="Lamp Overview" />
+        </Border>
 
-                <views:LampOverviewView DataContext="{Binding LampOverviewViewModel}" />
-            </Border>
+        <!--  Daily Analysis Header  -->
+        <Border
+            Grid.Row="0"
+            Grid.Column="2"
+            Margin="5,5"
+            Style="{StaticResource PanelBorder}">
 
-            <!--  Daily Analysis Content  -->
-            <views:LampDailyAnalysisView Grid.Column="1" DataContext="{Binding LampDailyAnalysisViewModel}" />
-        </Grid>
+            <TextBlock
+                Margin="10,0"
+                Style="{StaticResource Header}"
+                Text="Daily Analysis" />
+        </Border>
+
+        <!--  Overview Content  -->
+        <views:LampOverviewView
+            Grid.Row="1"
+            Grid.Column="0"
+            DataContext="{Binding LampOverviewViewModel}" />
+
+        <!--  Daily Analysis Content  -->
+        <views:LampDailyAnalysisView
+            Grid.Row="1"
+            Grid.Column="2"
+            DataContext="{Binding LampDailyAnalysisViewModel}" />
     </Grid>
 </UserControl>
