--- a/CapstoneProject/Views/LampOverviewView.xaml
+++ b/CapstoneProject/Views/LampOverviewView.xaml
@@ -8,209 +8,259 @@
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <!--  Lamp Properties  -->
-            <RowDefinition Height="7*" />
-            <!--  Settings Button  -->
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="0">
+    <Border Margin="5,5" Style="{StaticResource PanelBorder}">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <!--  Lamp Properties definition  -->
+                <RowDefinition Height="7*" />
+                <!--  Buttons definition  -->
+                <RowDefinition Height="*" MaxHeight="60" />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
 
-            <!--  Name  -->
-            <Image
-                Grid.Row="0"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/Name.png"
-                Stretch="Uniform" />
+            <!--  Lamp Properties  -->
+            <Grid Grid.Row="0" IsSharedSizeScope="True">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                    <RowDefinition Height="*" MaxHeight="60" />
+                </Grid.RowDefinitions>
+
+                <!--  Name  -->
+                <Border Grid.Row="0" Style="{StaticResource AntiquePropertyBorder}" />
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/Name.png"
+                        Stretch="Uniform" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource Property}"
+                        Text="Name:" />
+                    <TextBlock
+                        Grid.Column="2"
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.Name}" />
+                </Grid>
+
+                <!--  Id  -->
+                <Border Grid.Row="1" Style="{StaticResource FloralPropertyBorder}" />
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/Id.png"
+                        Stretch="Uniform" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource Property}"
+                        Text="ID:" />
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.Id}" />
+                </Grid>
+
+                <!--  Connection Status  -->
+                <Border Grid.Row="2" Style="{StaticResource AntiquePropertyBorder}" />
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/ConnectionStatus.png"
+                        Stretch="Uniform" />
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Connection" />
+                        <TextBlock Style="{StaticResource Property}" Text="Status:" />
+                    </StackPanel>
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.ConnectionStatus}" />
+                </Grid>
+
+                <!--  Battery Percentage  -->
+                <Border Grid.Row="3" Style="{StaticResource FloralPropertyBorder}" />
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/BatteryPercentage.png"
+                        Stretch="Uniform" />
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Battery" />
+                        <TextBlock Style="{StaticResource Property}" Text="Percentage:" />
+                    </StackPanel>
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.BatteryPercentage}" />
+                </Grid>
+
+                <!--  On Time  -->
+                <Border Grid.Row="4" Style="{StaticResource AntiquePropertyBorder}" />
+                <Grid Grid.Row="4">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/OnTime.png"
+                        Stretch="Uniform" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource Property}"
+                        Text="On Time:" />
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.OnTime}" />
+                </Grid>
+
+                <!--  Off Time  -->
+                <Border Grid.Row="5" Style="{StaticResource FloralPropertyBorder}" />
+                <Grid Grid.Row="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/OffTime.png"
+                        Stretch="Uniform" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource Property}"
+                        Text="Off Time:" />
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.OffTime}" />
+                </Grid>
+
+                <!--  Automated Turn On/Off  -->
+                <Border Grid.Row="6" Style="{StaticResource AntiquePropertyBorder}" />
+                <Grid Grid.Row="6">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" SharedSizeGroup="TextBlockColumn" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Image
+                        Grid.Column="0"
+                        MaxHeight="60"
+                        Margin="7"
+                        Source="pack://application:,,,/Icons/AutomatedOnOff.png"
+                        Stretch="Uniform" />
+                    <StackPanel
+                        Grid.Column="1"
+                        Margin="5,0,10,0"
+                        VerticalAlignment="Center">
+                        <TextBlock
+                            Margin="0,0,0,-5"
+                            Style="{StaticResource Property}"
+                            Text="Automated" />
+                        <TextBlock Style="{StaticResource Property}" Text="Turn On/Off:" />
+                    </StackPanel>
+                    <TextBlock
+                        Grid.Column="2"
+                        VerticalAlignment="Center"
+                        Text="{Binding LampViewModel.Automated}" />
+                </Grid>
+            </Grid>
+
+            <!--  Buttons  -->
             <StackPanel
-                Grid.Row="0"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="Name:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.Name}" />
-            </StackPanel>
-
-            <!--  Id  -->
-            <Image
                 Grid.Row="1"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/Id.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="1"
-                Grid.Column="1"
-                Margin="5,0,10,0"
+                HorizontalAlignment="Right"
                 Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="ID:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.Id}" />
-            </StackPanel>
 
-            <!--  Connection Status  -->
-            <Image
-                Grid.Row="2"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/ConnectionStatus.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="2"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="Connection Status:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.ConnectionStatus}" />
-            </StackPanel>
-
-            <!--  Battery Percentage  -->
-            <Image
-                Grid.Row="3"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/BatteryPercentage.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="3"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="Battery Percentage:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.BatteryPercentage}" />
-            </StackPanel>
-
-            <!--  On Time  -->
-            <Image
-                Grid.Row="4"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/OnTime.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="4"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="On Time:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.OnTime}" />
-            </StackPanel>
-
-            <!--  Off Time  -->
-            <Image
-                Grid.Row="5"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/OffTime.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="5"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="Off Time:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.OffTime}" />
-            </StackPanel>
-
-            <!--  Automated On/Off  -->
-            <Image
-                Grid.Row="6"
-                Grid.Column="0"
-                Margin="7"
-                Source="pack://application:,,,/Icons/AutomatedOnOff.png"
-                Stretch="Uniform" />
-            <StackPanel
-                Grid.Row="6"
-                Grid.Column="1"
-                Margin="5,0,10,0"
-                Orientation="Horizontal">
-                <TextBlock
-                    VerticalAlignment="Center"
-                    Style="{StaticResource Property}"
-                    Text="Automated On/Off:" />
-                <TextBlock
-                    Margin="5,0,0,0"
-                    VerticalAlignment="Center"
-                    Text="{Binding LampViewModel.Automated}" />
+                <!--  Settings Button  -->
+                <Button
+                    Margin="3"
+                    Command="{Binding GoToLampSettingsView}"
+                    Style="{StaticResource Button}">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="7" />
+                        </Style>
+                    </Button.Resources>
+                    <StackPanel Orientation="Horizontal">
+                        <Image
+                            MaxHeight="60"
+                            Margin="5"
+                            Source="pack://application:,,,/Icons/Setting.png"
+                            Stretch="Uniform" />
+                        <TextBlock
+                            Margin="0,0,5,0"
+                            VerticalAlignment="Center"
+                            Text="Settings" />
+                    </StackPanel>
+                </Button>
             </StackPanel>
         </Grid>
-
-        <!--  Settings Button  -->
-        <StackPanel
-            Grid.Row="1"
-            HorizontalAlignment="Right"
-            Orientation="Horizontal">
-            <Button
-                Margin="20,2,2,2"
-                Padding="5"
-                Background="SlateGray"
-                BorderBrush="OrangeRed"
-                BorderThickness="3"
-                Command="{Binding GoToLampSettingsView}">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="7" />
-                    </Style>
-                </Button.Resources>
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="pack://application:,,,/Icons/Setting.png" Stretch="Uniform" />
-                    <TextBlock
-                        Margin="5,0"
-                        VerticalAlignment="Center"
-                        Text="Settings" />
-                </StackPanel>
-            </Button>
-        </StackPanel>
-    </Grid>
+    </Border>
 </UserControl>
